Updated README - identify changes made to an application (e.g. Hermes)